--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
         <div class="col-lg-12">
             <div class="row">
 
-                <!-- Sales Card -->
+                <!-- Orders Card -->
                 <div class="col-xxl-4 col-md-6">
                     <div class="card info-card sales-card">
 
@@ -96,7 +96,7 @@
                     </div>
                 </div><!-- End Revenue Card -->
 
-                <!-- Customers Card -->
+                <!-- Inventory Card -->
                 <div class="col-xxl-4 col-xl-12">
 
                     <div class="card info-card customers-card">
@@ -117,7 +117,7 @@
                         </div>
 
                         <div class="card-body">
-                            <h5 class="card-title">Products types <span>| This
+                            <h5 class="card-title">Inventory <span>| This
                                     Year</span></h5>
 
                             <div class="d-flex align-items-center">
@@ -161,62 +161,22 @@
                             <h5 class="card-title">Reports <span>/Today</span></h5>
 
                             <!-- Line Chart -->
-                            <div id="reportsChart"></div>
+                            <div class="col-11 ">
+                                <div id="chart">
+                                    <apx-chart
+                                        [series]="chartOptions.series"
+                                        [chart]="chartOptions.chart"
+                                        [xaxis]="chartOptions.xaxis"
+                                        [stroke]="chartOptions.stroke"
+                                        [tooltip]="chartOptions.tooltip"
+                                        [dataLabels]="chartOptions.dataLabels"
+                                        [legend]="chartOptions.legend"
+                                        [markers]="chartOptions.markers"
+                                        [grid]="chartOptions.grid"
+                                        [title]="chartOptions.title"></apx-chart>
+                                </div>
 
-                            <script>
-                    document.addEventListener("DOMContentLoaded", () => {
-                      new ApexCharts(document.querySelector("#reportsChart"), {
-                        series: [{
-                          name: 'Sales',
-                          data: [31, 40, 28, 51, 42, 82, 56],
-                        }, {
-                          name: 'Revenue',
-                          data: [11, 32, 45, 32, 34, 52, 41]
-                        }, {
-                          name: 'Customers',
-                          data: [15, 11, 32, 18, 9, 24, 11]
-                        }],
-                        chart: {
-                          height: 350,
-                          type: 'area',
-                          toolbar: {
-                            show: false
-                          },
-                        },
-                        markers: {
-                          size: 4
-                        },
-                        colors: ['#4154f1', '#2eca6a', '#ff771d'],
-                        fill: {
-                          type: "gradient",
-                          gradient: {
-                            shadeIntensity: 1,
-                            opacityFrom: 0.3,
-                            opacityTo: 0.4,
-                            stops: [0, 90, 100]
-                          }
-                        },
-                        dataLabels: {
-                          enabled: false
-                        },
-                        stroke: {
-                          curve: 'smooth',
-                          width: 2
-                        },
-                        xaxis: {
-                          type: 'datetime',
-                          categories: ["2018-09-19T00:00:00.000Z", "2018-09-19T01:30:00.000Z", "2018-09-19T02:30:00.000Z", "2018-09-19T03:30:00.000Z", "2018-09-19T04:30:00.000Z", "2018-09-19T05:30:00.000Z", "2018-09-19T06:30:00.000Z"]
-                        },
-                        tooltip: {
-                          x: {
-                            format: 'dd/MM/yy HH:mm'
-                          },
-                        }
-                      }).render();
-                    });
-                  </script>
-                            <!-- End Line Chart -->
-
+                            </div>
                         </div>
 
                     </div>
