--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,72 @@
-<p>product works!</p>
+
+<div class="pagetitle">
+    <h1>Prodcuts</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a>Home</a></li>
+            <li class="breadcrumb-item">Products</li>
+            <li class="breadcrumb-item active">Add Product</li>
+        </ol>
+    </nav>
+</div><!-- End Page Title -->
+<section class="section">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <!-- <h5 class="card-title">Product Details</h5> -->
+
+                    <form class="row g-3">
+                        <div class="row g-3">
+                            <div class="col-md-8">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <label for="inputName5"
+                                            class="form-label">Product
+                                            name</label>
+                                        <input type="text" class="form-control"
+                                            id="inputName5">
+                                    </div>
+                                    <div class="col-lg-12">
+                                        <label for="inputName5"
+                                            class="form-label">Price
+                                        </label>
+                                        <input type="number"
+                                            class="form-control"
+                                            id="inputName5">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <img src alt="Product Img">
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <label for="inputName5"
+                                class="form-label">Description
+                            </label>
+                            <textarea class="form-control"
+                                placeholder="Description"
+                                id="floatingTextarea" style="height: 100px;"></textarea>
+
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox"
+                                    id="flexSwitchCheckDefault">
+                                <label class="form-check-label"
+                                    for="flexSwitchCheckDefault">Add to Inventory</label>
+                            </div>
+                        </div>
+                        <div class="text-end">
+                            <button type="reset" class="btn btn-secondary">Reset</button>
+                            <button type="submit" class="ms-2 btn btn-primary">Submit</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
